# stardust

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build.sh  install-mingw-dependencies.sh  run.sh  sd.sh  win_build_and_run_x64_debug.cmd  win_build_and_run_x64_release.cmd  win_build_and_run_x86_debug.cmd  win_build_x64_release.cmd  win_build_x86_debug.cmd  win_run_x86.cmd
cmake/: FindFreetype.cmake  FindPackageHandleStandardArgs.cmake  FindPackageMessage.cmake  FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake  cmake_linux.sh  cmake_vs2013.cmd  cmake_vs2013_x64.cmd  cmake_vs2013_x86.cmd  cmake_xcode.sh  win32.cmake  win64.cmake
data/: animations.json  recipes.json
data/cutscenes/: test.cutscene.lua
data/levels/: level1.json  level2.json  level3.json  level4.json  level5.json  level6.json
data/menu/: new_game.xcf  new_game_selected.xcf
data/scripts/: base.lua  boss.brain  brain.beacon.lua  brain.bonus.lua  brain.enemy.bullet.lua  brain.enemy.explosion.lua  brain.enemy.lua  brain.level-pauser.lua  brain.platform.lua  brain.player.bullet.lua  brain.player.enter.stage.lua  brain.player.lua  dialog.lua  event.end_level.lua  test.lua
data/scripts/core/: base.camera.lua  base.dialog.lua  base.entity.lua  base.level.lua  base.math.lua  base.scene.lua  base.session.lua  base.weapon.lua
data/shaders/: core.solid.ps.glsl  core.sprite.ps.glsl  core.sprite.vs.glsl  font.compatible.ps.glsl  font.outline.ps.glsl  font.ps.glsl  font.shadow.ps.glsl  font.vs.glsl  normal.ps  normal.ps.glsl  normal.vs  normal.vs.glsl  postprocess.ps  postprocess.ps.glsl  postprocess.vs.glsl  postprocess_backup.ps  test.ps.glsl
data/sprites/: aureola.xcf  enemyship2b.tga
docs/: Stardust Architecture.asta  editor.ep
docs/manual/: Makefile  index.html
docs/manual/src/: entity.lifecycle.adoc  index.adoc  level.editor.adoc  lua.camera.adoc  lua.entity.adoc  lua.level.adoc  lua.math.adoc  lua.scene.adoc  lua.session.adoc  lua.weapon.adoc  recipe.editor.adoc  sprite.editor.adoc
docs/manual/stylesheets/: maker.css
scripts/: win_build_and_run_x86_release.cmd  win_build_x64_debug.cmd  win_build_x86_release.cmd  win_run_x64.cmd
src/: Animation.cpp  Animation.h  Box.cpp  Box.h  CMakeLists.txt  Collisions.cpp  Entity.cpp  Entity.h  EventSystem.cpp  EventSystem.h  FileSystem.cpp  FileSystem.h  Font.cpp  Font.h  FpsCounter.cpp  GLheaders.h  GfxSystem.cpp  GfxSystem.h  InputManager.cpp  InputManager.h  InputProvider.cpp  InputProvider.h  Randomizer.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  SpritePool.cpp  SpritePool.h  Stardust.cpp  Stardust.h  Starfield.cpp  Starfield.h  Texture.cpp  Texture.h  TextureGenerator.cpp  TextureGenerator.h  Timer.cpp  Timer.h  Window.cpp  (+3 more)
src/framework/: Animation.cpp  Animation.h  AudioSystem.cpp  AudioSystem.h  Box.cpp  Box.h  CMakeLists.txt  Collisions.cpp  Collisions.h  CommandLineParser.cpp  CommandLineParser.h  ConcurrentQueue.cpp  ConcurrentQueue.h  Entity.cpp  Entity.h  EventSystem.cpp  EventSystem.h  Fbo.cpp  Fbo.h  FileSystem.cpp  FileSystem.h  Font.cpp  Font.h  FontGlyphAtlas.cpp  FontGlyphAtlas.h  FontMetrics.cpp  FontMetrics.h  FontRenderStyle.cpp  FontRenderStyle.h  FpsCounter.cpp  FpsCounter.h  GameState.cpp  GameState.h  GfxSystem.cpp  GfxSystem.h  GpuProgram.cpp  GpuProgram.h  GpuProgramConstants.cpp  GpuProgramConstants.h  InputProvider.cpp  (+28 more)
src/game/: Application.cpp  Application.h  AttributeBag.cpp  AttributeBag.h  CMakeLists.txt  Camera.cpp  Camera.h  CutScene.cpp  CutScene.h  Dialog.cpp  Dialog.h  DialogRepository.cpp  DialogRepository.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Explosion.cpp  Explosion.h  GameEvent.h  GameObject.cpp  GameObject.h  GameObjectFactory.cpp  GameObjectFactory.h  GameServiceLocator.cpp  GameServiceLocator.h  GameSession.cpp  GameSession.h  GameState.h  GameStateCredits.cpp  GameStateCredits.h  GameStateCutSceneAfterLevel.cpp  GameStateCutSceneAfterLevel.h  GameStateCutSceneBeforeLevel.cpp  GameStateCutSceneBeforeLevel.h  GameStateEditor.cpp  GameStateEditor.h  GameStateIntro.cpp  GameStateIntro.h  GameStateMenu.cpp  (+48 more)
src/game/scripting/: AudioScriptExporter.cpp  AudioScriptExporter.h  BasicScriptExporter.cpp  BasicScriptExporter.h  CMakeLists.txt  CameraScriptExporter.cpp  CameraScriptExporter.h  CutSceneScriptExporter.cpp  CutSceneScriptExporter.h  DialogRepositoryScriptExporter.cpp  DialogRepositoryScriptExporter.h  EntityScriptExporter.cpp  EntityScriptExporter.h  GameSessionScriptExporter.cpp  GameSessionScriptExporter.h  InputScriptExporter.cpp  InputScriptExporter.h  SceneScriptExporter.cpp  SceneScriptExporter.h  Script.cpp  Script.h  ScriptUtils.cpp  ScriptUtils.h  ScriptingSystem.cpp  ScriptingSystem.h
src/game/states/: CMakeLists.txt  GameStateCredits.cpp  GameStateCredits.h  GameStateCutSceneAfterLevel.cpp  GameStateCutSceneAfterLevel.h  GameStateCutSceneBeforeLevel.cpp  GameStateCutSceneBeforeLevel.h  GameStateEditor.cpp  GameStateEditor.h  GameStateGameFinished.cpp  GameStateGameFinished.h  GameStateGameOver.cpp  GameStateGameOver.h  GameStateHandlePlayerDeath.cpp  GameStateHandlePlayerDeath.h  GameStateIntro.h  GameStateLevelFinished.cpp  GameStateLevelFinished.h  GameStateMenu.cpp  GameStateMenu.h  GameStateNewGame.cpp  GameStateNewGame.h  GameStateNextLevel.cpp  GameStateNextLevel.h  GameStateOptions.cpp  GameStateOptions.h  GameStatePlayLevel.cpp  GameStatePlayLevel.h  GameStatePreviewEntity.h  GameStatePreviewLevel.cpp  GameStatePreviewLevel.h  GameStateShowLevelStats.cpp  GameStateShowLevelStats.h  GameStateTest.h
tools/editor/acidsnow/: MainWindow.cs  Program.cs  editor.csproj  editor.sln
tools/editor/acidsnow/Properties/: AssemblyInfo.cs
tools/editor/acidsnow/gtk-gui/: MainWindow.cs  gui.stetic
tools/editor/web/: editor.animation.editor.css  editor.animation.editor.js  editor.assets.js  editor.css  editor.js  editor.recipe.editor.css  editor.sprite.selector.css  editor.sprite.selector.js  editor.spritesheet.editor.js  editor.utils.js  index.html
tools/editor/web/css/: editor.css  (+5 more)
tools/git-hooks/: pre-push
tools/releases/: index.php
(+12 files in other folders)
